# Virtual-Triage-System

./: .gitignore  INSTALL.md  README.md  admin-edit.css  admin-faq.css  admin-remove.css  chat.py  database.py  frontend.py  grader_notes.md  main-page.css  pyproject.toml  requirements.txt  test_data.py  test_routes.py  website.py
deploy/: .env.example  docker-compose.yml
knowledge_files/: contacts.txt  instructions.txt  knowledge.txt
knowledge_files_markdown/: contacts.md  instructions_v2.md  instructions_v3.md  instructions_v4.md  knowledge.md
sample_chatbot_questions/: sample_questions.md
sample_knowledge_files/: sample_contacts.txt  sample_knowledge.txt
static/: admin-search-results.css  base.css  chat.js  faq-page.css  index.css  search-results.css
templates/: AdminAdd.html  AdminEdit.html  AdminFAQ.html  AdminRemove.html  AdminSearchResults.html  FAQPage.css  FAQPage.html  MainPage.css  MainPage.html  SearchResultsPage.css  SearchResultsPage.html  admin-add.css  admin-add.html  admin-edit.css  admin-edit.html  admin-faq-search.css  admin-faq-search.html  admin-faq.css  admin-faq.html  admin-remove.css  admin-remove.html  admin-search-results.html  admin-search.css  admin-search.html  base.css  base.html  chat.css  chat.html  faq-page.css  faq-page.html  faq-search-admin.css  faq-search-admin.html  faq-search.css  faq-search.html  index.css  index.html  main-page.css  main-page.html  search-results.html  search.css  (+2 more)
tests/: test_chat_server.py  test_database.py  test_website.py
vts/: bot_logging.py  bot_server.py  chat.py  chat_server.py  config.py  (+9 more)
(+42 files in other folders)
