[project]
name = "virtual_triage_system"
version = "0.3.3" # 3rd week of sprint 3
description = "UMBC CSMC 447 Fall 2025 Team 5 Project"
dependencies = [ "flask",
                 "sqlalchemy",
                 "markdown",
                 "Whoosh",
                 "openai",
                 "Flask-Bcrypt" ]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vts*"]
